--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,24 @@
 body {
   margin: 0;
 }
+
+main {
+  background: #343434;
+}
+
+nav {
+  background: #055E68;
+  color: #B9D2D2;
+}
+
+#navLinks > *:hover {
+  color: #62A388;
+}
+
+.titleFont {
+  font-family: 'Titillium Web', sans-serif;
+}
+
+.mainFont {
+  font-family: 'Montserrat', sans-serif;
+}
